--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,28 +19,86 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Press Me"
-            android:id="@+id/theButton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="103dp"
-            android:onClick="theButtonClicked"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="1">
 
-        <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/theScrollView"
-            android:fillViewport="false">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:id="@+id/horizontalViewLL">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:id="@+id/newValueET"
+                    android:editable="true"
+                    android:enabled="true"
+                    android:gravity="center"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Front"
+                    android:id="@+id/addFrontButton"
+                    android:onClick="aButtonClicked"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add End"
+                    android:id="@+id/addEndButton"
+                    android:onClick="aButtonClicked"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remove Front"
+                    android:id="@+id/removeFrontButton"
+                    android:onClick="aButtonClicked"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remove End"
+                    android:id="@+id/removeEndButton"
+                    android:onClick="aButtonClicked"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/scrollViewLL">
+                android:layout_height="wrap_content"
+                android:id="@+id/scrollViewLL"
+                android:layout_weight="0.27">
+
+                <ScrollView
+                    android:layout_width="fill_parent"
+                    android:layout_height="119dp"
+                    android:id="@+id/theScrollView"
+                    android:fillViewport="false">
+
+                </ScrollView>
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
